--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cheerio": "^0.22.0",
     "chokidar": "^3.5.3",
     "cli-table3": "^0.6.3",
+    "disme-fca": "^0.0.3",
     "event": "^1.0.0",
     "express": "^4.18.2",
     "fca-deku": "^1.0.2",
+    "fca-disme": "^0.0.1-security",
     "fca-horizon-remake": "^0.0.1-security",
     "figlet": "^1.6.0",
     "form-data": "^4.0.0",
