--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "KaguyaBot",
   "version": "1.0.1",
   "description": "It's just a simple bot!",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node .",
+    "start": "node app",
     "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
